Connected Devices Change Password

--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -40,7 +40,7 @@
         android:inputType="text"
         android:maxLines="1"
         android:padding="@dimen/_6sdp"
-        android:text="New SSID"
+        android:text="New_SSID"
         android:textAlignment="viewStart"
         android:textColorHint="@color/black"
         android:textSize="@dimen/_14ssp"
@@ -72,7 +72,7 @@
         android:hint="@string/password"
         android:inputType="textPassword"
         android:padding="@dimen/_6sdp"
-        android:text="28939283"
+        android:text="12345@Pass"
         android:textAlignment="viewStart"
         android:textColorHint="@color/black"
         android:textSize="@dimen/_14ssp"
