[Uncompleted] SystemInfo, Connected Devices

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,11 @@
 
     </include>
 
-
+<WebView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    app:layout_constraintTop_toBottomOf="@id/toolbar"
+    android:id="@+id/webview"/>
     <Spinner
         android:id="@+id/spinner"
         android:layout_width="wrap_content"
@@ -88,7 +92,7 @@
         android:visibility="gone"
         android:inputType="textPassword"
         android:padding="@dimen/_6sdp"
-        android:text="KA154627"
+        android:text="123@Pass"
         android:textAlignment="viewStart"
         android:textColorHint="@color/black"
         android:textSize="@dimen/_14ssp"
