--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -72,7 +72,7 @@
         android:hint="@string/password"
         android:inputType="textPassword"
         android:padding="@dimen/_6sdp"
-        android:text="28939283"
+        android:text="1234@Pass"
         android:textAlignment="viewStart"
         android:textColorHint="@color/black"
         android:textSize="@dimen/_14ssp"
