--- a/app/src/main/res/layout/activity_laninterface.xml
+++ b/app/src/main/res/layout/activity_laninterface.xml
@@ -101,6 +101,7 @@
                 android:background="@color/light_grey"
                 android:clickable="true"
                 android:focusable="true"
+                android:visibility="invisible"
                 android:padding="@dimen/_8sdp"
                 android:fontFamily="@font/montserrat_medium"
                 android:text="LAN Interface Settings"
@@ -127,6 +128,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_8sdp"
                     android:text="IP address"
+                    android:visibility="invisible"
+
                     android:fontFamily="@font/montserrat_medium"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -137,6 +140,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_8sdp"
                     android:fontFamily="@font/montserrat_medium"
+                    android:visibility="invisible"
                     android:text="Server subnet mask:"
                     app:layout_constraintStart_toStartOf="@+id/tV_ipAddress1"
                     app:layout_constraintTop_toBottomOf="@+id/tV_ipAddress1" />
@@ -148,6 +152,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_8sdp"
                     android:text="Secondary LAN"
+                    android:visibility="invisible"
                     android:fontFamily="@font/montserrat_medium"
                     app:layout_constraintBottom_toBottomOf="@+id/cB_secLAN"
                     app:layout_constraintStart_toStartOf="parent"
@@ -158,6 +163,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Device NAme"
+                    android:visibility="invisible"
                     android:fontFamily="@font/montserrat_medium"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/tV_secondaryLan" />
@@ -167,6 +173,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_8sdp"
+                    android:visibility="invisible"
                     android:fontFamily="@font/montserrat_medium"
                     app:layout_constraintBottom_toBottomOf="@+id/tV_ipAddress1"
                     app:layout_constraintStart_toStartOf="@+id/tV_subnetMaskNum"
@@ -176,6 +183,7 @@
                     android:id="@+id/tV_subnetMaskNum"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:visibility="invisible"
                     android:layout_marginTop="@dimen/_8sdp"
                     android:fontFamily="@font/montserrat_medium"
                     app:layout_constraintBottom_toBottomOf="@+id/tV_subnetMask"
@@ -188,7 +196,7 @@
                     android:layout_height="wrap_content"
                     android:clickable="false"
                     style="@style/GrayCheckboxStyle"
-
+                    android:visibility="invisible"
                     android:fontFamily="@font/montserrat_medium"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -199,6 +207,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_8sdp"
+                    android:visibility="invisible"
                     android:fontFamily="@font/montserrat_medium"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/cB_secLAN"
@@ -216,6 +225,7 @@
                 android:focusable="true"
                 android:padding="@dimen/_8sdp"
                 android:text="DHCP Server"
+                android:visibility="invisible"
                 android:fontFamily="@font/montserrat_medium"
                 android:textColor="@color/purple"
                 android:textStyle="bold"
@@ -336,6 +346,7 @@
                 android:padding="@dimen/_8sdp"
                 android:fontFamily="@font/montserrat_medium"
                 android:text="RA Settings"
+                android:visibility="invisible"
                 android:textColor="@color/purple"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -389,6 +400,7 @@
                 android:padding="@dimen/_8sdp"
                 android:fontFamily="@font/montserrat_medium"
                 android:text="IPV6 DHCP Server"
+                android:visibility="invisible"
                 android:textColor="@color/purple"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
@@ -439,6 +451,7 @@
                 android:padding="@dimen/_8sdp"
                 android:fontFamily="@font/montserrat_medium"
                 android:text="UPnP"
+                android:visibility="invisible"
                 android:textColor="@color/purple"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -494,6 +507,7 @@
                 android:fontFamily="@font/montserrat_medium"
                 android:textColor="@color/purple"
                 android:textStyle="bold"
+                android:visibility="invisible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -507,7 +521,6 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:visibility="gone"
-
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tV_tr064">
 
