--- a/app/src/main/res/layout/activity_wlaninfo.xml
+++ b/app/src/main/res/layout/activity_wlaninfo.xml
@@ -72,6 +72,7 @@
             android:layout_marginTop="@dimen/_24sdp"
             android:fontFamily="@font/montserrat_medium"
             android:text="Channel:"
+            android:visibility="invisible"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tV_macAddress" />
 
@@ -82,6 +83,7 @@
             android:layout_marginTop="@dimen/_24sdp"
             android:fontFamily="@font/montserrat_medium"
             android:text="Transmit Power (%): "
+            android:visibility="invisible"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_channel" />
 
@@ -92,6 +94,7 @@
             android:layout_marginTop="@dimen/_24sdp"
             android:fontFamily="@font/montserrat_medium"
             android:text="Region:"
+            android:visibility="invisible"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_transmitPower" />
 
@@ -124,6 +127,7 @@
             android:id="@+id/tv_channelNum"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:visibility="invisible"
             android:fontFamily="@font/montserrat_medium"
             app:layout_constraintBottom_toBottomOf="@+id/tv_channel"
             app:layout_constraintStart_toEndOf="@id/tv_transmitPower"  />
@@ -133,6 +137,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/montserrat_medium"
+            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="@+id/tv_transmitPower"
             app:layout_constraintStart_toEndOf="@id/tv_transmitPower"
             app:layout_constraintTop_toTopOf="@+id/tv_transmitPower" />
@@ -142,6 +147,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/montserrat_medium"
+            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="@+id/tV_region"
             app:layout_constraintStart_toEndOf="@id/tv_transmitPower" />
 
